src/objects/Community_Event_Tag__c.object
<CustomObject>
    <description>This object allows Tags and a Group to be associated to an Event record.</description>
    <fields>
        <fullName>Community_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows tags to be associated with this Event record.</description>
        <label>Community Event</label>
        <referenceTo>Community_Events__c</referenceTo>
        <relationshipLabel>Group &amp; Tags</relationshipLabel>
        <relationshipName>Events_Tag_Joins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Group_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows a Community Group to be associated with a Community Event.  Not mandatory.  Only used when joining a Community Event to a Chatter Group.</description>
        <label>Community Group Control</label>
        <referenceTo>Community_Group_Control__c</referenceTo>
        <relationshipLabel>Group Events</relationshipLabel>
        <relationshipName>Community_Event_Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows tags to be associated with this Event record.</description>
        <label>Community Tag</label>
        <referenceTo>Community_Tag__c</referenceTo>
        <relationshipLabel>Event Items Tagged</relationshipLabel>
        <relationshipName>Community_EventItems_Tagged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Represents the Name of the related Event.</description>
        <formula>Community_Event__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Name of the related Event.</inlineHelpText>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Public__c</fullName>
        <description>Indicates if the related Event is flagged as Public.</description>
        <formula>Community_Event__r.Public__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the related Event is flagged as Public.</inlineHelpText>
        <label>Event Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Tag_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Event Tag SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Teaser__c</fullName>
        <description>Represents the Teaser of the related Event.</description>
        <formula>Community_Event__r.Teaser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Teaser of the related Event.</inlineHelpText>
        <label>Event Teaser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <description>Represents the Start and End time of the related Event.</description>
        <formula>TEXT(MONTH(DATEVALUE(Community_Event__r.Start__c)))
&amp;&quot;/&quot;&amp;
TEXT(DAY(DATEVALUE(Community_Event__r.Start__c)))
&amp;&quot;/&quot;&amp;
TEXT(YEAR(DATEVALUE(Community_Event__r.Start__c)))

&amp; &quot; to &quot; &amp; 

TEXT(MONTH(DATEVALUE(Community_Event__r.End__c)))
&amp;&quot;/&quot;&amp;
TEXT(DAY(DATEVALUE(Community_Event__r.End__c)))
&amp;&quot;/&quot;&amp;
TEXT(YEAR(DATEVALUE(Community_Event__r.End__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Start and End time of the related Event.</inlineHelpText>
        <label>Event Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Discoverable__c</fullName>
        <description>Indicates if the Group related to the Community Event is Discoverable by everyone in the Community.</description>
        <formula>Community_Group_Control__r.Discoverable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the Group related to the Community Event is Discoverable by everyone in the Community.</inlineHelpText>
        <label>Group Discoverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Purpose__c</fullName>
        <description>Represents the Purpose of the related Group.</description>
        <formula>TEXT( Community_Group_Control__r.Purpose__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Purpose of the related Group.</inlineHelpText>
        <label>Group Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <description>Represents the Status of the related Group.</description>
        <formula>TEXT( Community_Group_Control__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Status of the related Group.</inlineHelpText>
        <label>Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <description>Represents the Type of Group that is related to the Community Event record.</description>
        <formula>TEXT( Community_Group_Control__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Type of Group that is related to the Community Event record.</inlineHelpText>
        <label>Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Represents the Theme the related Tag is associated with.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Community_Theme__r.Id, Community_Tag__r.Theme_Name__c ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Theme the related Tag is associated with.</inlineHelpText>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <label>Community Event Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community_Event__c</columns>
        <columns>Community_Group_Control__c</columns>
        <columns>Community_Tag__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CET-{yy}{mm}{0}</displayFormat>
        <label>Community Event Tag</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Event Tag</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>